--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "5.1.2",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.2"
   },
   "devDependencies": {
